--- a/chapter6-postprocess.tex
+++ b/chapter6-postprocess.tex
@@ -6,12 +6,12 @@
 % \section{A survey of re-rankers} ( adding some overall experiments to compare methods)
 
 \section{FAR/PFAR}
-    % \input chapter5-farpfar.tex
+    \input chapter6-farpfar.tex
 
 \section{Opportunistic Multi-aspect Fairness through Personalized Re-ranking (OFAIR)}
-    \input chapter5-ofair.tex
+    % \input chapter6-ofair.tex
     
     
 \section{Social Choice for Re-ranking Under Fairness (SCRUF): Dynamic Lotteries for Multi-group Fairness-Aware Recommendation}
-    % \input chapter5-dynamicfair.tex
+    % \input chapter6-dynamicfair.tex
 
