--- a/chapter1-intro.tex
+++ b/chapter1-intro.tex
@@ -193,7 +193,7 @@ The research questions that we seek to answer are as follows:
 % This trade-off can have different underlying reasons. firstly, accuracy/personalization is a consumer-centric goal most of the time, and for example provider-side fairness is provider side. due to popularity bias, increasing personalization, might lead to less diversity for providers. and eventually less diversity for the consumers themselves. Achieving different goals at the same time might not be even possible. one other reason is the multi-party settings that recommendations offer, every one is striving to achieve what's best for them, and these goals might be competing. providers want one thing, the consumers want another thing. Therefore it's important to design methods to find a balance between these goals.
 
 
-
+\todo{mentioning that the cost of the data and EU rules, doesn't always allow up to gather more data, we do the data minimization then...}
 \todo{Do we need a summary of Contributions?}
 \todo[inline]{DO we need future work section?}
 
