--- a/main.tex
+++ b/main.tex
@@ -9,6 +9,7 @@
 \usepackage{comment}
 \usepackage{booktabs} 
 \usepackage{bbm}
+\usepackage{tabularx}
 
 %% Math Macros
 \newcommand{\reals}{\ensuremath{\mathbb{R}}}
@@ -20,6 +21,8 @@
 \newcommand{\sensitive}{\mathcal{S}}
 \newcommand{\rerankers}{\mathcal{K}}
 \newcommand{\metrics}{\mathcal{M}}
+
+% \setcounter{tocdepth}{1}
 
 
 \newtheorem{definition}{Definition}
@@ -119,13 +122,13 @@
 \begin{document}
 
 \input macros.tex
-% \input chapter1-intro.tex
-% \input chapter2-fairness.tex
-% \input chapter3-methodology.tex
-% \input chapter4-inprocess.tex
-\input chapter5-postprocess.tex
-% \input chapter6-librec.tex
-% \input chapter7-conclusion.tex
+\input chapter1-intro.tex
+\input chapter3-fairness.tex
+\input chapter4-methodology.tex
+\input chapter5-inprocess.tex
+\input chapter6-postprocess.tex
+\input chapter7-librec.tex
+% \input chapter8-conclusion.tex
 
 %%%%%%%%%   then the Bibliography, if any   %%%%%%%%%
 \bibliographystyle{plain}	% or "siam", or "alpha", etc.
